--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: Arial, sans-serif;
     text-align: center;
     background-color: #f0f8ff;
     margin: 0;
@@ -23,7 +23,7 @@ body {
     height: 100%;
     background-color: #fff;
     border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 4px 10px rgba(0 0 0 / 20%);
     position: absolute;
     transition: transform 0.5s ease, opacity 0.5s ease;
     overflow: hidden;
