--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -30,7 +30,7 @@ body {
     height: 100%;
     background-color: #fff;
     border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0 0 0 /20%);
+    box-shadow: 0 4px 10px rgb(0 0 0 /20%);
     position: absolute;
     transition: transform 0.5s ease, opacity 0.5s ease;
     overflow: hidden;
