--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -153,7 +153,7 @@ button {
   border-radius: 14px;
   padding: 20px;
   text-align: center;
-  box-shadow: 0 6px 12px rgba(0 0 0 /10%);
+  box-shadow: 0 6px 12px rgb(0 0 0 /10%);
 }
 
 .pokemon-card img {
@@ -192,7 +192,7 @@ button {
 
 .edit-mode .pokemon-card {
   border: 2px solid #6b6;
-  box-shadow: 0 4px 10px rgba(0 128 0 /15%);
+  box-shadow: 0 4px 10px rgb(0 128 0 /15%);
 }
 
 .edit-mode h1 {
