added the home-page with links to all pages, added additional links in the other pages with the use of buttons, and added some styling

--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -215,3 +215,12 @@ button {
   justify-content: center;
   align-items: center;
 }
+
+/* Specific rule for images on index.html */
+#index-page .pokemon-card img {
+  height: 150px !important;
+  width: auto !important;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
+}
