--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Segoe UI", sans-serif;
   background: linear-gradient(to bottom, #e0f7ff, #fff);
   margin: 0;
   padding: 0;
@@ -21,7 +21,8 @@ h2 {
 }
 
 /* Button Styles for pokemon cards page and generic button positioning */
-button { /* General button styles for navigation through pages */
+button {
+  /* General button styles for navigation through pages */
   background-color: #0074d9;
   color: white;
   border: none;
@@ -33,7 +34,7 @@ button { /* General button styles for navigation through pages */
 }
 
 #buttons {
-  text-align: center;  /* flexbox (flexible box layout) creates responsive layouts and helps align things horizontally or vertically */
+  text-align: center; /* flexbox (flexible box layout) creates responsive layouts and helps align things horizontally or vertically */
   margin-top: 20px;
 }
 
@@ -51,8 +52,6 @@ button { /* General button styles for navigation through pages */
   gap: 10px; /* Space between left-side buttons */
 }
 
-
-
 /* Header styles */
 .header {
   background-color: #fc0;
@@ -60,7 +59,6 @@ button { /* General button styles for navigation through pages */
   padding: 20px;
   border-bottom: 4px solid #0074d9;
 }
-
 
 .logo {
   width: 220px;
@@ -167,7 +165,6 @@ button { /* General button styles for navigation through pages */
   flex-wrap: wrap;
 }
 
-
 /* Pokemon card styles */
 .pokemon-card {
   width: 200px;
@@ -191,7 +188,6 @@ button { /* General button styles for navigation through pages */
   font-size: 20px;
 }
 
-
 /* flashcard style for collection page */
 .flashcards-page #card-container {
   display: flex;
@@ -202,10 +198,13 @@ button { /* General button styles for navigation through pages */
   max-width: 900px;
 }
 
-
 /* Edit page style */
 .edit-mode {
-  background: linear-gradient(to bottom, #e0ffe0, #fff); /* soft green gradient */
+  background: linear-gradient(
+    to bottom,
+    #e0ffe0,
+    #fff
+  ); /* soft green gradient */
 }
 
 /* Optional: adjust header or card colors */
@@ -219,7 +218,7 @@ button { /* General button styles for navigation through pages */
 }
 
 .edit-mode button {
-  background-color: #4CAF50; /* green buttons */
+  background-color: #4caf50; /* green buttons */
 }
 
 .edit-mode button:hover {
@@ -227,7 +226,7 @@ button { /* General button styles for navigation through pages */
 }
 
 .description {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: large;
   display: flex;
   flex-direction: column;
@@ -267,4 +266,3 @@ button { /* General button styles for navigation through pages */
   font-size: 24px;
   margin-top: 10px;
 }
-
