--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -192,7 +192,7 @@ button {
 
 /* Added select feature when hovering over card */
 .pokemon-card {
-  width: 200px;
+  width: 190px;
   height: 280px;
   background: white;
   border: 3px solid #0074d9;
@@ -205,13 +205,16 @@ button {
 
 .pokemon-card:hover {
   transform: scale(1.05);
-  box-shadow: 0 10px 18px rgba(0, 0, 0, 0.15);
+  background-color: rgb(0 0 0 / 15%);
 }
 
+/* Makes sure Pokemon image is centered in the card */
 .pokemon-card img {
-  width: 200px;
+  width: 100%;
   height: 200px;
   object-fit: contain;
+  display: block;
+  margin: 0 auto;
 }
 
 .pokemon-card h3 {
@@ -298,7 +301,7 @@ button {
   gap: 10px;               /* More spacing between cards */
   padding: 40px 20px;      /* More outer padding */
   margin: 0 auto;
-  max-width: 1200px;       /* Wider max width */
+  max-width: 1000px;       /* Wider max width */
   width: 100%;
   box-sizing: border-box;
   justify-content: center;
@@ -311,13 +314,13 @@ button {
 }
 
 /* Collection grid works on mobile devices */
-@media (max-width: 1024px) {
+@media (max-width <= 1024px) {
   .collection-grid {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media (max-width: 640px) {
+@media (max-width <= 640px) {
   .collection-grid {
     grid-template-columns: repeat(2, 1fr);
   }
