--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -354,3 +354,9 @@ button {
   font-style: italic;
 }
 
+/* Disables hover on edit page */
+.edit-mode .pokemon-card:hover {
+  transform: none;
+  background-color: white; /* or whatever the default is */
+}
+
