--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -107,6 +107,47 @@ button {
 }
 
 /* --------------------------------------------------
+   Home Page
+-------------------------------------------------- */
+.home-page {
+  width: 250px;
+  background: white;
+  border: 3px solid #0074d9;
+  border-radius: 14px;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 6px 12px rgb(0 0 0 /10%);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.home-page:hover {
+  transform: scale(1.05);
+  background-color: rgb(0 0 0 / 10%);
+}
+
+.home-page img {
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto 10px;
+}
+
+.home-page-grid {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-wrap: wrap;
+  gap: 30px;
+  padding: 40px 20px;
+  margin: 0 auto;
+  max-width: 1100px;
+}
+
+/* --------------------------------------------------
    Game Layout
 -------------------------------------------------- */
 .game-layout {
