smart loading as well as necessary test cases

--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -45,6 +45,11 @@ button {
   margin-top: 20px;
 }
 
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
 #button-container > div {
   display: flex;
   gap: 10px;
