fixed favorite feature in css file

--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -370,6 +370,7 @@ button:disabled {
   text-align: center;
   padding: 2rem;
   display: none; /* hidden by default */
+}
 
 /* --------------------------------------------------
    Favorite Icon in Collection
