fixed merge issue

--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -510,6 +510,7 @@ button:disabled {
 .edit-mode .pokemon-card h3 {
   font-size: 24px;
   margin-top: 10px;
+}
   
  /* other features not familiar with */
 .type-badge {
